Bug 136208 - Hovering above the font size box and using scrollwheel to set size neither has an effect (same for font type) nor resets to true font size
Summary: Hovering above the font size box and using scrollwheel to set size neither ha...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-27 21:35 UTC by Telesto
Modified: 2020-09-08 19:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (2.19 MB, video/mp4)
2020-09-06 15:19 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-27 21:35:15 UTC
Description:
Hoovering above the font size box and using scrollwheel to set size has no effect (same for font type)

Steps to Reproduce:
1. Open Writer
2. Type Hello World
3. CTRL+A
4. hoover above the font pick in toolbar or font size box & scroll
5. Select some text or press backspace (font box/font size even wrong)

Actual Results:
Font size or font isn't applied. And the input is sticky

Expected Results:
Make it working of disallow this


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.1

and 
4.4.7.2

and in
LibreOffice 3.5.7.2 
Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b
Comment 1 Telesto 2020-08-27 21:36:11 UTC
@Caolan
Any opinion on this? Or is this an UX question?
Comment 2 Caolán McNamara 2020-08-28 11:14:49 UTC
If the steps are...

1. Open Writer
2. Type Hello World
3. CTRL+A
4. click inside the font combobox text area
5. use mouse wheel scroll to change number
6. value shown changes but selected text in document remains unchanged in size
7. click back in document and select some text
8. font combobox shows size of selected text

then its working as expected, the size in the combobox is only applied on:
 an explicit click from the dropdown list
 on pressing return
 on pressing tab

svx/source/tbxctrls/tbunocontroller.cxx SvxFontSizeBox_Base for the class involved
Comment 3 Telesto 2020-09-06 15:19:39 UTC
Created attachment 165202 [details]
Screencast

Slightly inefficient screencast.. but shows the problem

The fontbox doesn't act (not sure if it should) nor does it reset (which at least prevents strange behavior)
Comment 4 Caolán McNamara 2020-09-08 13:31:19 UTC
Looks like it has always been like this. So setting earliest affected version to reflect that.

Given the explicit handling the widgets do to only set the size on certain explicit events I think having the size of the text not immediately change on these scrolling, but without focus, events is what I'd expect it to do.

Ideally we should reset to the size of the text under the cursor, but seeing as we didn't lose focus nothing currently triggers to update the widgets.
Comment 5 Caolán McNamara 2020-09-08 14:20:49 UTC
What other toolkits do is to have the widget take the focus when the scrollwheel affects them, if we do that then the situation for a hover and scroll is the same as if it was a click, hover and scroll. Which would simplify matters and the font size will be restored to the size used by the document if focus is restored to the document without explicitly applying the widget value
Comment 6 Commit Notification 2020-09-08 19:28:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d05c1459f5b8150654ca0b7098cc331ba6009e07

tdf#136208 make combo/list/spin take focus on use of scroll wheel

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-09-08 19:32:58 UTC
that makes the use of the scroll wheel over the name/size widgets give focus to them, so if the value isn't applied and focus moved back to the document the focus-in there reset the widgets back the value of the current cursor point and it becomes consistent with comment #2